Fixed issue with footer overlapping buttons on index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,11 @@ body {
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
+
+#hidden-div {
+    margin: 100px;
+    padding: 100px;
+}
   
   /*********modal content box */
 .modal-content {
